<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:paddingLeft="40dp"
        android:paddingTop="20dp"
        android:paddingRight="40dp"
        android:paddingBottom="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_info_first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name">

            <EditText
                android:id="@+id/account_info_first_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_info_last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_info_first_name_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_last_name">

            <EditText
                android:id="@+id/account_info_last_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_info_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_info_last_name_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_phone_number">

            <EditText
                android:id="@+id/account_info_phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_info_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_info_phone_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_email">

            <EditText
                android:id="@+id/account_info_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_info_confirm_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_info_email_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_confirm_email">

            <EditText
                android:id="@+id/account_info_confirm_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_info_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_info_confirm_email_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password">

            <EditText
                android:id="@+id/account_info_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_info_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_info_password_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_confirm_password">

            <EditText
                android:id="@+id/account_info_confirm_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/account_info_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_info_confirm_password_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/blue_dark"
            android:gravity="center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </RelativeLayout>

</LinearLayout>
