<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">
    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusableInTouchMode="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name">

            <EditText
                android:id="@+id/register_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_name_layout"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_email">

            <EditText
                android:id="@+id/register_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email_layout"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password">

            <EditText
                android:id="@+id/register_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_layout"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_confirm_password">

            <EditText
                android:id="@+id/register_confirm_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_confirm_password_layout"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_phone_number">

            <EditText
                android:id="@+id/register_phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_phone_layout"
            android:text="Submit"
            android:background="@color/blue_dark"
            android:textColor="@android:color/white"
            android:padding="8dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>
    </RelativeLayout>

</LinearLayout>
