<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">
    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusableInTouchMode="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/lookup_nurse_subheader_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/driver_lookup_nurse_subheader"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lookup_nurse_hospice_layout"
            android:layout_below="@id/lookup_nurse_subheader_textview"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hospice">

            <EditText
                android:id="@+id/lookup_nurse_hospice_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lookup_nurse_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lookup_nurse_hospice_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_name">

            <EditText
                android:id="@+id/lookup_nurse_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lookup_nurse_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lookup_nurse_name_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_phone_number">

            <EditText
                android:id="@+id/lookup_nurse_phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_light">
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:textColor="@android:color/white"
            android:background="@color/blue_dark"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_alignParentRight="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:textColor="@android:color/white"
            android:background="@color/blue_dark"/>
    </RelativeLayout>

</RelativeLayout>
