<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <include
        android:id="@+id/header_layout"
        layout="@layout/header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_layout"
        android:paddingBottom="60dp">

            <RelativeLayout
                android:id="@+id/driver_contact_us_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="60dp">

                <LinearLayout
                    android:id="@+id/contact_location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingRight="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Albuquerque"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/contact_us" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_us_first_address"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingRight="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Los Lunas"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/contact_us_second" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_us_second_address"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_us_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_location_layout"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_name">

                    <EditText
                        android:id="@+id/contact_us_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_us_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_us_name_layout"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_email">

                    <EditText
                        android:id="@+id/contact_us_email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_us_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_us_email_layout"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_phone_number_optional">

                    <EditText
                        android:id="@+id/contact_us_phone_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_us_comment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_us_phone_layout"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_comments">

                    <EditText
                        android:id="@+id/contact_us_comment_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_light">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/blue_dark"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:text="Back"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/blue_dark"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </RelativeLayout>
</RelativeLayout>
